--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h2>Explore my world of projects, hobbies, and more</h2>
 
   <!-- Welcome Image -->
-  <img src="images/welcome.jpg" alt="A friendly welcome banner or personal photo">
+  <img src="welcome.jpg" alt="A friendly welcome banner or personal photo">
 
   <!-- Paragraph Introduction -->
   <p>Hello! I'm glad you're here. This website is a space where I share more about myself, the work I’ve done, and the things I enjoy. Feel free to look around and get to know me better.</p>
@@ -44,11 +44,11 @@
   </ul>
   
   <h3>Projects</h3>
-  <img src="images/projects.jpg" alt="Screenshot of one of my projects showing a webpage or app interface">
+  <img src="projects.jpg" alt="Screenshot of one of my projects showing a webpage or app interface">
 
   <!-- Image of a Hobby -->
   <h3>Hobbies</h3>
-  <img src="images/hobbies.png" alt="Photo representing one of my hobbies, like painting or music">
+  <img src="hobbies.png" alt="Photo representing one of my hobbies, like painting or music">
 
   <!-- Description List -->
   <h3>Pages at a glance:</h3>
@@ -67,4 +67,5 @@
   <p>Check out my <a href="https://github.com" target="_blank">GitHub profile</a> to see more code projects.</p>
 
 </body>
+
 </html>
