--- a/hobbies.html
+++ b/hobbies.html
@@ -31,7 +31,7 @@
     <li>Badminton – It's fun, fast-paced, and great for reflexes and strategy.</li>
   </ul>
   <figure>
-  <img src="images/basketball.jpg" alt="Playing basketball on an outdoor court" width="400">
+  <img src="basketball.jpg" alt="Playing basketball on an outdoor court" width="400">
   <figcaption> A picture of me playing Basketball.</figcaption>
   </figure>
 
@@ -39,7 +39,7 @@
   <h2>🎨 Drawing</h2>
   <p>Drawing is one of my favorite creative outlets. I often sketch characters or abstract art to relax and express myself visually.</p>
   <figure>
-  <img src="images/drawing.jpeg" alt="Example of my drawing artwork" width="400">
+  <img src="drawing.jpeg" alt="Example of my drawing artwork" width="400">
   <figcaption> Another one of my drawings.</figcaption>
   </figure>
 
@@ -53,8 +53,8 @@
     <li>Valorant</li>
     <li>Battlefield 2042</li>
   </ul>
-  <img src="images/fifa.jpg" alt="Fifa 24." width="400">
-  <img src="images/nba.jpg" alt="NBA 2K24." width="400">
+  <img src="fifa.jpg" alt="Fifa 24." width="400">
+  <img src="nba.jpg" alt="NBA 2K24." width="400">
 
   <!-- Section 4: Coding -->
   <h2>💻 Coding for Fun</h2>
@@ -62,4 +62,5 @@
 
 
 </body>
+
 </html>
