--- a/contact.html
+++ b/contact.html
@@ -28,21 +28,22 @@
 
   <!-- UW–Madison Logo -->
   <figure>
-    <img src="images/uwmadison.png" alt="University of Wisconsin–Madison Logo" width="300">
+    <img src="uwmadison.png" alt="University of Wisconsin–Madison Logo" width="300">
     <figcaption>University of Wisconsin–Madison</figcaption>
   </figure>
 
   <!-- Instagram -->
   <figure>
-    <img src="images/insta.jpg" alt="Instagram logo" width="80">
+    <img src="insta.jpg" alt="Instagram logo" width="80">
     <figcaption>Follow me on Instagram: <strong>@harshatjames</strong></figcaption>
   </figure>
 
   <!-- GitHub -->
   <figure>
-    <img src="images/github.png" alt="GitHub logo" width="80">
+    <img src="github.png" alt="GitHub logo" width="80">
     <figcaption>See my code projects on <a href="https://github.com/harshitp23" target="_blank">GitHub (@harshitp23)</a></figcaption>
   </figure>
 
 </body>
 </html>
+
