--- a/about.html
+++ b/about.html
@@ -39,17 +39,17 @@
     <dd>Computer Science, Coding, drawing, basketball, playing video games and etc...</dd>
 	
 	<!-- Image: Computer Science -->
-	<img src="images/compsci.jpg" alt="Computer science or symbol representing tech interest">
+	<img src="compsci.jpg" alt="Computer science or symbol representing tech interest">
 	<p>This image represents my interest in computer science and coding.</p>
 
 	<!-- Image: Drawing/Self Portrait -->
 	<figure>
-    <img src="images/self.png" alt="Self portrait">
+    <img src="self.png" alt="Self portrait">
     <figcaption>This self portrait shows my love for creativity and drawing.</figcaption>
     </figure>
 
 	<!-- Image: Video Games -->
-	<img src="images/videogames.jpg" alt="Screenshot related to video games I enjoy, like Fifa, NBA2K and etc">
+	<img src="videogames.jpg" alt="Screenshot related to video games I enjoy, like Fifa, NBA2K and etc">
 	<p>Gaming is one of my favorite hobbies – especially FIFA and NBA2K.</p>
 
     <dt>Goals</dt>
@@ -57,4 +57,5 @@
   </dl>
 
 </body>
+
 </html>
