--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
     <li>Data validation and structured query management for efficient record-keeping.</li>
   </ul>
   <figure>
-    <img src="images/hotelmanagement.png" alt="Hotel management system interface screenshot">
+    <img src="hotelmanagement.png" alt="Hotel management system interface screenshot">
     <figcaption>Hotel Management System UI built with Tkinter</figcaption>
   </figure>
 
@@ -45,7 +45,7 @@
     <li>Automated price calculation for efficient billing.</li>
   </ul>
   <figure>
-    <img src="images/zooticket.jpg" alt="Zoo ticket system screenshot">
+    <img src="zooticket.jpg" alt="Zoo ticket system screenshot">
     <figcaption>Zoo Ticket System calculates pricing based on age</figcaption>
   </figure>
 
@@ -58,7 +58,7 @@
     <li>Automatically calculates required scores to maintain target grades.</li>
   </ul>
   <figure>
-    <img src="images/grade.jpg" alt="Student grade calculator interface">
+    <img src="grade.jpg" alt="Student grade calculator interface">
     <figcaption>Grade Calculator helps track and plan academic performance</figcaption>
   </figure>
 
@@ -81,3 +81,4 @@
 
 </body>
 </html>
+
