--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
   </ul>
   <figure>
     <img src="zooticket.jpg" alt="Zoo ticket system screenshot">
-    <figcaption>Zoo Ticket System calculates pricing based on age</figcaption>
+    <figcaption>Zoo Ticket System </figcaption>
   </figure>
 
   <!-- Project 3: Student Grade Calculator -->
@@ -81,4 +81,5 @@
 
 </body>
 </html>
+
 
