--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,20 @@
     <figcaption>Grade Calculator helps track and plan academic performance</figcaption>
   </figure>
 
+    <!-- Small Games Collection -->
+  <h2>Mini Games Collection (Python)</h2>
+  <p>A collection of fun and interactive console-based games built using Python to strengthen logic and problem-solving skills.</p>
+  <ul>
+    <li><strong>Auction Game</strong>: Players bid for items, with the highest bidder winning at the end.</li>
+    <li><strong>Number Guessing</strong>: Guess the correct number between 1 and 100. Includes multiple difficulty levels that adjust the number of attempts available.</li>
+    <li><strong>Blackjack</strong>: A simplified version of the classic card game against a computer dealer.</li>
+    <li><strong>Higher or Lower</strong>: Predict which celebrity has more Instagram followers, testing your knowledge of social media popularity.</li>
+  </ul>
+  <figure>
+    <img src="games.jpg" alt="Mini games collection screenshot">
+    <figcaption>Console-based Mini Games in Python</figcaption>
+  </figure>
+
   <!-- College Projects List -->
   <h2>College Coursework Projects</h2>
   <ul>
@@ -81,5 +95,6 @@
 
 </body>
 </html>
+
 
 
