--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,18 @@
     <figcaption>See my code projects on <a href="https://github.com/harshitp23" target="_blank">GitHub (@harshitp23)</a></figcaption>
   </figure>
 
+  <!-- LinkedIn -->
+  <section>
+    <h2>Connect with me on LinkedIn</h2>
+    <p>
+      Visit my profile here: 
+      <a href="https://www.linkedin.com/in/harshit-prithiani-4a9555313/" target="_blank">
+        linkedin.com/in/harshit-prithiani-4a9555313
+      </a>
+    </p>
+  </section>
+
 </body>
 </html>
+
 
