--- a/index.html
+++ b/index.html
@@ -2,70 +2,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to My Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Navigation Bar -->
-  <nav>
+  <!-- Header -->
+  <header>
+    <div class="logo">Harshit's Website</div>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Welcome to My Personal Website</h1>
+    <p>Explore my world of projects, hobbies, and more</p>
+    <a href="projects.html" class="btn">See My Work</a>
+  </section>
+
+  <!-- Intro Section -->
+  <section class="intro">
+    <h2>Hello! I'm glad you're here.</h2>
+    <p>This website is a space where I share more about myself, the work I’ve done, and the things I enjoy. Feel free to look around and get to know me better.</p>
+    <p><strong>This site was built from scratch</strong> using only HTML and CSS. <em>No templates, no shortcuts!</em></p>
+    <p>Thanks for visiting, and I hope you enjoy exploring!</p>
+  </section>
+
+  <!-- Profile Image Section -->
+  <section class="profile-image">
+    <img src="me.jpg" alt="Photo of Harshit" class="profile-pic">
+  </section>
+
+  <!-- Features Section -->
+  <section class="features">
+    <h2>What You’ll Find Here:</h2>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="hobbies.html">Hobbies</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li>My background and goals</li>
+      <li>Projects I’ve created</li>
+      <li>My personal hobbies and interests</li>
+      <li>Ways to connect with me</li>
     </ul>
-  </nav>
+  </section>
 
-  <!-- Main Heading -->
-  <h1>Welcome to My Personal Website</h1>
+  <!-- Projects Section -->
+  <section class="projects">
+    <h2>Projects</h2>
+    <div class="card-container">
+      <div class="card">
+        <img src="projects.jpg" alt="Project 1">
+        <h3>Project 1</h3>
+        <p>A brief description of my project.</p>
+      </div>
+      <div class="card">
+        <img src="projects.jpg" alt="Project 2">
+        <h3>Project 2</h3>
+        <p>Another amazing project I worked on.</p>
+      </div>
+    </div>
+  </section>
 
-  <!-- Subheading -->
-  <h2>Explore my world of projects, hobbies, and more</h2>
+  <!-- Hobbies Section -->
+  <section class="hobbies">
+    <h2>Hobbies</h2>
+    <div class="card-container">
+      <div class="card">
+        <img src="hobbies.png" alt="Hobby">
+        <h3>Hobby 1</h3>
+        <p>Something I love doing in my free time.</p>
+      </div>
+      <div class="card">
+        <img src="hobbies.png" alt="Hobby 2">
+        <h3>Hobby 2</h3>
+        <p>Another favorite activity of mine.</p>
+      </div>
+    </div>
+  </section>
 
-  <!-- Welcome Image -->
-  <img src="welcome.jpg" alt="A friendly welcome banner or personal photo">
-
-  <!-- Paragraph Introduction -->
-  <p>Hello! I'm glad you're here. This website is a space where I share more about myself, the work I’ve done, and the things I enjoy. Feel free to look around and get to know me better.</p>
-
-  <!-- Styling Example Elements -->
-  <p><strong>This site was built from scratch</strong> using only HTML and CSS. <em>No templates, no shortcuts!</em></p>
-  <p style="font-size: 1.2em;">Thanks for visiting, and I hope you enjoy exploring!</p>
-
-  <!-- Unordered List -->
-  <h3>What you’ll find here:</h3>
-  <ul>
-    <li>My background and goals</li>
-    <li>Projects I’ve created</li>
-    <li>My personal hobbies and interests</li>
-    <li>Ways to connect with me</li>
-  </ul>
-  
-  <h3>Projects</h3>
-  <img src="projects.jpg" alt="Screenshot of one of my projects showing a webpage or app interface">
-
-  <!-- Image of a Hobby -->
-  <h3>Hobbies</h3>
-  <img src="hobbies.png" alt="Photo representing one of my hobbies, like painting or music">
-
-  <!-- Description List -->
-  <h3>Pages at a glance:</h3>
-  <dl>
-    <dt>About</dt>
-    <dd>Learn more about who I am and where I come from.</dd>
-    <dt>Projects</dt>
-    <dd>See the work I’ve done in school and on my own.</dd>
-    <dt>Hobbies</dt>
-    <dd>Discover what I enjoy doing in my free time.</dd>
-    <dt>Contact</dt>
-    <dd>Get in touch with me through email or social media.</dd>
-  </dl>
-
-  <!-- External Link with meaningful text -->
-  <p>Check out my <a href="https://github.com" target="_blank">GitHub profile</a> to see more code projects.</p>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Harshit | <a href="contact.html">Contact Me</a> | <a href="https://github.com/harshitp23" target="_blank">GitHub</a></p>
+  </footer>
 
 </body>
-
 </html>
