--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@
   <!-- Header -->
   <header>
     <div class="logo">Harshit's Website</div>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
   </header>
 
   <!-- Hero Section -->
@@ -91,6 +82,30 @@
   <footer>
     <p>&copy; 2025 Harshit | <a href="contact.html">Contact Me</a> | <a href="https://github.com/harshitp23" target="_blank">GitHub</a></p>
   </footer>
+
+  <!-- Places to Glance Section -->
+  <section class="places-to-glance">
+    <h2>Pages at a Glance</h2>
+    <div class="page-links">
+      <div class="page-card">
+        <h3><a href="about.html">About</a></h3>
+        <p>Learn more about me, my background, and what drives my passion for technology and learning.</p>
+      </div>
+      <div class="page-card">
+        <h3><a href="projects.html">Projects</a></h3>
+        <p>Explore the projects I’ve worked on, from academic assignments to personal coding experiments.</p>
+      </div>
+      <div class="page-card">
+        <h3><a href="hobbies.html">Hobbies</a></h3>
+        <p>Get a glimpse into the activities and interests I enjoy outside of academics.</p>
+      </div>
+      <div class="page-card">
+        <h3><a href="contact.html">Contact</a></h3>
+        <p>Find ways to connect with me through email, social media, or other platforms.</p>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 </html>
