--- a/index.html
+++ b/index.html
@@ -78,11 +78,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Harshit | <a href="contact.html">Contact Me</a> | <a href="https://github.com/harshitp23" target="_blank">GitHub</a></p>
-  </footer>
-
   <!-- Places to Glance Section -->
   <section class="places-to-glance">
     <h2>Pages at a Glance</h2>
@@ -106,6 +101,12 @@
     </div>
   </section>
 
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Harshit | <a href="contact.html">Contact Me</a> | <a href="https://github.com/harshitp23" target="_blank">GitHub Account</a></p>
+  </footer>
+
 
 </body>
 </html>
+
