--- a/index.html
+++ b/index.html
@@ -19,83 +19,41 @@
     <p>Explore my world of projects, hobbies, and more</p>
     <a href="projects.html" class="btn">See My Work</a>
   </section>
+  
 
-  <!-- Intro Section -->
-  <section class="intro">
-    <h2>Hello! I'm glad you're here.</h2>
-    <p>This website is a space where I share more about myself, the work I’ve done, and the things I enjoy. Feel free to look around and get to know me better.</p>
-    <p><strong>This site was built from scratch</strong> using only HTML and CSS. <em>No templates, no shortcuts!</em></p>
-    <p>Thanks for visiting, and I hope you enjoy exploring!</p>
-  </section>
-
-  <!-- Profile Image Section -->
-  <section class="profile-image">
-    <img src="me.jpg" alt="Photo of Harshit" class="profile-pic">
-  </section>
-
-  <!-- Features Section -->
-  <section class="features">
-    <h2>What You’ll Find Here:</h2>
-    <ul>
-      <li>My background and goals</li>
-      <li>Projects I’ve created</li>
-      <li>My personal hobbies and interests</li>
-      <li>Ways to connect with me</li>
-    </ul>
-  </section>
-
-  <!-- Projects Section -->
-  <section class="projects">
-    <h2>Projects</h2>
-    <div class="card-container">
-      <div class="card">
-        <img src="projects.jpg" alt="Project 1">
-        <h3>Project 1</h3>
-        <p>A brief description of my project.</p>
-      </div>
-      <div class="card">
-        <img src="projects.jpg" alt="Project 2">
-        <h3>Project 2</h3>
-        <p>Another amazing project I worked on.</p>
-      </div>
+ <!-- Intro Section -->
+<section class="intro">
+  <div class="intro-container">
+    <div class="intro-text">
+      <h2>Hello! I'm glad you're here.</h2>
+      <p>This website is a space where I share more about myself, the work I’ve done, and the things I enjoy. Feel free to look around and get to know me better.</p>
+      <p><strong>This site was built from scratch</strong> using only HTML and CSS. <em>No templates, no shortcuts!</em></p>
+      <p>Thanks for visiting, and I hope you enjoy exploring!</p>
     </div>
-  </section>
-
-  <!-- Hobbies Section -->
-  <section class="hobbies">
-    <h2>Hobbies</h2>
-    <div class="card-container">
-      <div class="card">
-        <img src="hobbies.png" alt="Hobby">
-        <h3>Hobby 1</h3>
-        <p>Something I love doing in my free time.</p>
-      </div>
-      <div class="card">
-        <img src="hobbies.png" alt="Hobby 2">
-        <h3>Hobby 2</h3>
-        <p>Another favorite activity of mine.</p>
-      </div>
+    <div class="intro-image">
+      <img src="me.jpg" alt="Photo of Harshit" class="profile-pic">
     </div>
-  </section>
-
+  </div>
+</section>
+  
   <!-- Places to Glance Section -->
   <section class="places-to-glance">
-    <h2>Pages at a Glance</h2>
+    <h2>Pages to Glance</h2>
     <div class="page-links">
       <div class="page-card">
-        <h3><a href="about.html">About</a></h3>
+        <h3><a href="about.html" class="glance-btn">About</a></h3>
         <p>Learn more about me, my background, and what drives my passion for technology and learning.</p>
       </div>
       <div class="page-card">
-        <h3><a href="projects.html">Projects</a></h3>
+        <h3><a href="projects.html" class="glance-btn">Projects</a></h3>
         <p>Explore the projects I’ve worked on, from academic assignments to personal coding experiments.</p>
       </div>
       <div class="page-card">
-        <h3><a href="hobbies.html">Hobbies</a></h3>
+        <h3><a href="hobbies.html" class="glance-btn">Hobbies</a></h3>
         <p>Get a glimpse into the activities and interests I enjoy outside of academics.</p>
       </div>
       <div class="page-card">
-        <h3><a href="contact.html">Contact</a></h3>
+        <h3><a href="contact.html" class="glance-btn">Contact</a></h3>
         <p>Find ways to connect with me through email, social media, or other platforms.</p>
       </div>
     </div>
@@ -109,4 +67,3 @@
 
 </body>
 </html>
-
