--- a/index.html
+++ b/index.html
@@ -59,10 +59,21 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Harshit | <a href="contact.html">Contact Me</a> | <a href="https://github.com/harshitp23" target="_blank">GitHub Account</a></p>
-  </footer>
+<footer>
+  <p>© 2025 Harshit</p>
+  <div class="social-icons">
+    <a href="https://instagram.com/yourusername" target="_blank">
+      <img src="instagram.png" alt="Instagram">
+    </a>
+    <a href="https://linkedin.com/in/yourusername" target="_blank">
+      <img src="linkedin.png" alt="LinkedIn">
+    </a>
+    <a href="https://github.com/yourusername" target="_blank">
+      <img src="github.png" alt="GitHub">
+    </a>
+  </div>
+</footer>
+
 
 
 </body>
