--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
+<!-- Header -->
+<header>
+  <div class="logo-title">
     <div class="logo">Harshit's Website</div>
-  </header>
+    <img src="mat.png" alt="Logo" class="logo-img">
+  </div>
+</header>
 
   <!-- Hero Section -->
   <section class="hero">
