--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 <footer>
   <p>© 2025 Harshit</p>
   <div class="social-icons">
-    <a href="https://instagram.com/yourusername" target="_blank">
+    <a href="https://instagram.com/harshatjames" target="_blank">
       <img src="instagram.png" alt="Instagram">
     </a>
-    <a href="https://linkedin.com/in/yourusername" target="_blank">
+    <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
       <img src="linkedin.png" alt="LinkedIn">
     </a>
-    <a href="https://github.com/yourusername" target="_blank">
+    <a href="https://github.com/harshitp23" target="_blank">
       <img src="github.png" alt="GitHub">
     </a>
   </div>
@@ -81,3 +81,4 @@
 
 </body>
 </html>
+
