--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
   <p>© 2025 Harshit</p>
   <div class="social-icons">
     <a href="https://instagram.com/harshatjames" target="_blank">
-      <img src="instagram.png" alt="Instagram">
+      <img src="instagram.png" alt="Instagram" width="64" height="64">
     </a>
     <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
-      <img src="linkedin.png" alt="LinkedIn">
+      <img src="linkedin.png" alt="LinkedIn" width="64" height="64">
     </a>
     <a href="https://github.com/harshitp23" target="_blank">
-      <img src="github.png" alt="GitHub">
+      <img src="github.png" alt="GitHub" width="64" height="64">
     </a>
   </div>
 </footer>
@@ -81,4 +81,5 @@
 
 </body>
 </html>
+
 
