--- a/about.html
+++ b/about.html
@@ -2,60 +2,110 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="hobbies.html">Hobbies</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+<!-- Header -->
+<header>
+  <div class="logo-title">
+    <div class="logo">Harshit's Website</div>
+    <img src="mat.png" alt="Logo" class="logo-img">
+  </div>
+</header>
 
-  <!-- Main Heading -->
-  <h1>About Me</h1>
+<!-- Navigation Bar -->
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html" class="active">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
-  <!-- Subheading -->
-  <h2>My Journey and Goals</h2>
+<!-- About Section -->
+<section class="about-section">
+  <div class="about-container">
+    <div class="about-text">
+      <h1>About Me</h1>
+      <h2>My Journey and Goals</h2>
+      <p>
+        Hello! I’m a student at UW-Madison majoring in Computer Science. I enjoy building projects, trying new hobbies, and working with digital tools like HTML and CSS. 
+        This website is part of my exploration into web development — made completely by hand!
+      </p>
+      <p>
+        I created this site as part of a project for my LIS351 class to showcase my skills and interests. Along the way, I’ve learned a lot about web accessibility, structure, and thoughtful design.
+      </p>
 
-  <!-- Paragraph -->
-  <p>Hello! I’m a student studying at UW-Madison. My major is Computer Science. I enjoy building projects, trying new hobbies, and working with digital tools like HTML and CSS. This website is part of my exploration into web development made completely by hand.</p>
+      <h3>A few quick facts:</h3>
+      <ul>
+        <li><strong>Location:</strong> Madison, Wisconsin</li>
+        <li><strong>Interests:</strong> Coding, drawing, basketball, and video games like FIFA and NBA2K.</li>
+        <li><strong>Goals:</strong> Improve my coding skills, build accessible websites, and express myself online.</li>
+      </ul>
+    </div>
 
-  <p>I created this site as part of a project for my LIS351 class to showcase my skills and interests. Along the way, I’ve learned a lot about web accessibility, structure, and thoughtful design.</p>
+    <div class="about-images">
+      <figure>
+        <img src="compsci.jpg" alt="Computer Science" class="about-img">
+        <figcaption>My interest in technology and coding.</figcaption>
+      </figure>
 
-  <!-- Description List -->
-  <h3>A few quick facts:</h3>
-  <dl>
-    <dt>Location</dt>
-    <dd>I’m currently based in Madison, Wisconsin</dd>
+      <figure>
+        <img src="self.png" alt="Self Portrait" class="about-img">
+        <figcaption>A self-portrait showing my creative side.</figcaption>
+      </figure>
 
-    <dt>Interests</dt>
-    <dd>Computer Science, Coding, drawing, basketball, playing video games and etc...</dd>
-	
-	<!-- Image: Computer Science -->
-	<img src="compsci.jpg" alt="Computer science or symbol representing tech interest">
-	<p>This image represents my interest in computer science and coding.</p>
+      <figure>
+        <img src="videogames.jpg" alt="Video Games" class="about-img">
+        <figcaption>Gaming is one of my favorite hobbies.</figcaption>
+      </figure>
+    </div>
+  </div>
+</section>
 
-	<!-- Image: Drawing/Self Portrait -->
-	<figure>
-    <img src="self.png" alt="Self portrait">
-    <figcaption>This self portrait shows my love for creativity and drawing.</figcaption>
-    </figure>
+<!-- Pages to Glance -->
+<section class="places-to-glance">
+  <h2>Pages to Glance</h2>
+  <div class="page-links">
+    <div class="page-card">
+      <h3><a href="index.html" class="glance-btn">Home</a></h3>
+      <p>Go back to the main page and explore everything about me.</p>
+    </div>
+    <div class="page-card">
+      <h3><a href="projects.html" class="glance-btn">Projects</a></h3>
+      <p>Check out the projects I’ve worked on so far.</p>
+    </div>
+    <div class="page-card">
+      <h3><a href="hobbies.html" class="glance-btn">Hobbies</a></h3>
+      <p>Learn more about my personal interests and hobbies.</p>
+    </div>
+    <div class="page-card">
+      <h3><a href="contact.html" class="glance-btn">Contact</a></h3>
+      <p>Find ways to connect with me.</p>
+    </div>
+  </div>
+</section>
 
-	<!-- Image: Video Games -->
-	<img src="videogames.jpg" alt="Screenshot related to video games I enjoy, like Fifa, NBA2K and etc">
-	<p>Gaming is one of my favorite hobbies – especially FIFA and NBA2K.</p>
-
-    <dt>Goals</dt>
-    <dd>To improve my coding skills, build accessible websites, and express myself online</dd>
-  </dl>
+<!-- Footer -->
+<footer>
+  <p>© 2025 Harshit</p>
+  <div class="social-icons">
+    <a href="https://instagram.com/harshatjames" target="_blank">
+      <img src="instagram.png" alt="Instagram" width="20" height="20">
+    </a>
+    <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
+      <img src="linkedin.png" alt="LinkedIn" width="20" height="20">
+    </a>
+    <a href="https://github.com/harshitp23" target="_blank">
+      <img src="github.png" alt="GitHub" width="20" height="20">
+    </a>
+  </div>
+</footer>
 
 </body>
-
 </html>
