--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   </div>
 </header>
 
+  <!-- Navigation Bar -->
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html" class="active">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
   <!-- Hero Section -->
   <section class="hero">
     <h1>Welcome to My Personal Website</h1>
@@ -81,5 +92,6 @@
 
 </body>
 </html>
+
 
 
