--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header-container">
     <div class="logo">
       Harshit's Website
-      <img src="mat.png" alt="Logo" class="header-logo">
+      <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
     </div>
     <nav>
       <ul>
@@ -70,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
