--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <header>
   <div class="logo-title">
     <div class="logo">Harshit's Website</div>
-    <img src="mat.png" alt="Logo" class="logo-img">
+    <img src="mat.png" alt="Logo" class="logo-img" width="64" height="48">
   </div>
 </header>
 
@@ -86,4 +86,5 @@
 
 </body>
 </html>
+
 
