--- a/about.html
+++ b/about.html
@@ -35,10 +35,7 @@
       <h2>My Journey and Goals</h2>
       <p>
         Hello! I’m a student at UW-Madison majoring in Computer Science. I enjoy building projects, trying new hobbies, and working with digital tools like HTML and CSS. 
-        This website is part of my exploration into web development — made completely by hand!
-      </p>
-      <p>
-        I created this site as part of a project for my LIS351 class to showcase my skills and interests. Along the way, I’ve learned a lot about web accessibility, structure, and thoughtful design.
+        This website is part of my exploration into web development, made completely by hand!
       </p>
 
       <h3>A few quick facts:</h3>
@@ -86,5 +83,6 @@
 
 </body>
 </html>
+
 
 
