--- a/about.html
+++ b/about.html
@@ -10,22 +10,22 @@
 
 <!-- Header -->
 <header>
-  <div class="logo-title">
-    <div class="logo">Harshit's Website</div>
-    <img src="mat.png" alt="Logo" class="logo-img" width="64" height="48">
+  <div class="header-container">
+    <div class="logo">
+      Harshit's Website
+      <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
-
-<!-- Navigation Bar -->
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html" class="active">About</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="hobbies.html">Hobbies</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
 
 <!-- About Section -->
 <section class="about-section">
@@ -83,6 +83,7 @@
 
 </body>
 </html>
+
 
 
 
