--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
 
-<!-- Header -->
+
+  <!-- header -->
 <header>
-  <div class="header-container">
-    <div class="logo">
-      Harshit's Website
-      <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <div class="logo-title">
+    <div class="logo">Harshit's Website</div>
+    <img src="mat.png" alt="Logo" class="header-logo">
   </div>
 </header>
+
+<nav class="home-nav">
+  <ul>
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 
 
   <!-- Hero Section -->
@@ -71,6 +71,7 @@
 
 </body>
 </html>
+
 
 
 
