--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="projects.html">Projects</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
@@ -82,6 +83,7 @@
 
 </body>
 </html>
+
 
 
 
