--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <a href="https://github.com/harshitp23" target="_blank">
       <img src="github.png" alt="GitHub" width="64" height="64">
     </a>
+    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=harshitprithiani@gmail.com" target="_blank">
+      <img src="gmail.png" alt="Gmail" width="64 height="64">
+    </a>
   </div>
 </footer>
 
@@ -72,6 +75,7 @@
 
 </body>
 </html>
+
 
 
 
