--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   <div class="logo-title">
     <div class="logo">Harshit's Website</div>
-    <img src="mat.png" alt="Logo" class="header-logo">
+    <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
   </div>
 </header>
 
@@ -75,6 +75,7 @@
 
 </body>
 </html>
+
 
 
 
