--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <header>
   <div class="logo-title">
     <div class="logo">Harshit's Website</div>
-    <img src="mat.png" alt="Logo" class="header-logo">
+    <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
   </div>
 </header>
 
@@ -83,6 +83,7 @@
 
 </body>
 </html>
+
 
 
 
