--- a/index.html
+++ b/index.html
@@ -1,88 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to My Website</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    <header>
+        <div class="logo-title">
+            <div class="logo">Harshit's Website</div>
+            <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
+        </div>
+    </header>
 
-  <!-- header -->
-<header>
-  <div class="logo-title">
-    <div class="logo">Harshit's Website</div>
-    <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
-  </div>
-</header>
+    <nav class="home-nav">
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="hobbies.html">Hobbies</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-<nav class="home-nav">
-  <ul>
-    <li><a href="index.html" class="active">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="hobbies.html">Hobbies</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+    <section class="hero">
+        <h1>Welcome to My Personal Website</h1>
+        <p>Explore my world of projects, hobbies, and more</p>
+        <a href="projects.html" class="btn">See My Work</a>
+    </section>
+    
+    <section class="intro main-content-alt"> 
+        <div class="intro-container">
+            <div class="intro-text">
+                <h2>Hello! I'm glad you're here.</h2>
+                <p>This website is a space where I share more about myself, the work I’ve done, and the things I enjoy. Feel free to look around and get to know me better.</p>
+                <p><strong>This site was built from scratch</strong> using only HTML and CSS. <em>No templates, no shortcuts!</em></p>
+                <p>Thanks for visiting, and I hope you enjoy exploring!</p>
+            </div>
+            <div class="intro-image">
+                <img src="me.jpg" alt="Photo of Harshit" class="profile-pic">
+            </div>
+        </div>
+    </section>
 
-
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Welcome to My Personal Website</h1>
-    <p>Explore my world of projects, hobbies, and more</p>
-    <a href="projects.html" class="btn">See My Work</a>
-  </section>
-  
-
- <!-- Intro Section -->
-<section class="intro">
-  <div class="intro-container">
-    <div class="intro-text">
-      <h2>Hello! I'm glad you're here.</h2>
-      <p>This website is a space where I share more about myself, the work I’ve done, and the things I enjoy. Feel free to look around and get to know me better.</p>
-      <p><strong>This site was built from scratch</strong> using only HTML and CSS. <em>No templates, no shortcuts!</em></p>
-      <p>Thanks for visiting, and I hope you enjoy exploring!</p>
-    </div>
-    <div class="intro-image">
-      <img src="me.jpg" alt="Photo of Harshit" class="profile-pic">
-    </div>
-  </div>
-</section>
-
-
-<footer>
-  <p>© 2025 Harshit</p>
-  <div class="social-icons">
-    <a href="https://instagram.com/harshatjames" target="_blank">
-      <img src="instagram.png" alt="Instagram" width="64" height="64">
-    </a>
-    <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
-      <img src="linkedin.png" alt="LinkedIn" width="64" height="64">
-    </a>
-    <a href="https://github.com/harshitp23" target="_blank">
-      <img src="github.png" alt="GitHub" width="64" height="64">
-    </a>
-    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=harshitprithiani@gmail.com" target="_blank">
-      <img src="gmail.png" alt="Gmail" width="64 height="64">
-    </a>
-  </div>
-</footer>
-
-
+    <footer>
+        <p>© 2025 Harshit</p>
+        <div class="social-icons">
+            <a href="https://instagram.com/harshatjames" target="_blank">
+                <img src="instagram.png" alt="Instagram" width="64" height="64">
+            </a>
+            <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
+                <img src="linkedin.png" alt="LinkedIn" width="64" height="64">
+            </a>
+            <a href="https://github.com/harshitp23" target="_blank">
+                <img src="github.png" alt="GitHub" width="64" height="64">
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
