--- a/about.html
+++ b/about.html
@@ -1,93 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Header -->
-<header>
-  <div class="logo-title">
-    <div class="logo">Harshit's Website</div>
-    <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
-  </div>
-</header>
+    <header>
+        <div class="logo-title">
+            <div class="logo">Harshit's Website</div>
+            <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
+        </div>
+    </header>
 
-<nav class="home-nav">
-  <ul>
-    <li><a href="index.html" class="active">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="hobbies.html">Hobbies</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+    <nav class="home-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html" class="active">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="hobbies.html">Hobbies</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
 
-<!-- About Section -->
-<section class="about-section">
-  <div class="about-container">
-    <div class="about-text">
-      <h1>About Me</h1>
-      <h2>My Journey and Goals</h2>
-      <p>
-        Hello! I’m a student at UW-Madison majoring in Computer Science. I enjoy building projects, trying new hobbies, and working with digital tools like HTML and CSS. 
-        This website is part of my exploration into web development, made completely by hand!
-      </p>
+    <section class="main-content about-section-content">
+        <h1 class="page-title">About Me</h1>
+        
+        <div class="about-container">
+            <div class="about-text">
+                <h2>My Journey and Goals</h2>
+                <p>
+                    Hello! I’m a student at UW-Madison majoring in Computer Science. I enjoy building projects, trying new hobbies, and working with digital tools like HTML and CSS. 
+                    This website is part of my exploration into web development, made completely by hand!
+                </p>
 
-      <h3>A few quick facts:</h3>
-      <ul>
-        <li><strong>Location:</strong> Madison, Wisconsin</li>
-        <li><strong>Interests:</strong> Coding, drawing, basketball, and video games like FIFA and NBA2K.</li>
-        <li><strong>Goals:</strong> Improve my coding skills, build accessible websites, and express myself online.</li>
-      </ul>
-    </div>
+                <h3>A few quick facts:</h3>
+                <ul>
+                    <li><strong>Location:</strong> Madison, Wisconsin</li>
+                    <li><strong>Interests:</strong> Coding, drawing, basketball, and video games like FIFA and NBA2K.</li>
+                    <li><strong>Goals:</strong> Improve my coding skills, build accessible websites, and express myself online.</li>
+                </ul>
+            </div>
 
-    <div class="about-images">
-      <figure>
-        <img src="compsci.jpg" alt="Computer Science" class="about-img">
-        <figcaption>My interest in technology and coding.</figcaption>
-      </figure>
+            <div class="about-images">
+                <figure>
+                    <img src="compsci.jpg" alt="Computer Science" class="about-img">
+                    <figcaption>My interest in technology and coding.</figcaption>
+                </figure>
 
-      <figure>
-        <img src="self.png" alt="Self Portrait" class="about-img">
-        <figcaption>A self-portrait showing my creative side.</figcaption>
-      </figure>
+                <figure>
+                    <img src="self.png" alt="Self Portrait" class="about-img">
+                    <figcaption>A self-portrait showing my creative side.</figcaption>
+                </figure>
 
-      <figure>
-        <img src="videogames.jpg" alt="Video Games" class="about-img">
-        <figcaption>Gaming is one of my favorite hobbies.</figcaption>
-      </figure>
-    </div>
-  </div>
-</section>
+                <figure>
+                    <img src="videogames.jpg" alt="Video Games" class="about-img">
+                    <figcaption>Gaming is one of my favorite hobbies.</figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
 
-<!-- Footer -->
-<footer>
-  <p>© 2025 Harshit</p>
-  <div class="social-icons">
-    <a href="https://instagram.com/harshatjames" target="_blank">
-      <img src="instagram.png" alt="Instagram" width="64" height="64">
-    </a>
-    <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
-      <img src="linkedin.png" alt="LinkedIn" width="64" height="64">
-    </a>
-    <a href="https://github.com/harshitp23" target="_blank">
-      <img src="github.png" alt="GitHub" width="64" height="64">
-    </a>
-  </div>
-</footer>
+    <footer>
+        <p>© 2025 Harshit</p>
+        <div class="social-icons">
+            <a href="https://instagram.com/harshatjames" target="_blank">
+                <img src="instagram.png" alt="Instagram" width="64" height="64">
+            </a>
+            <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
+                <img src="linkedin.png" alt="LinkedIn" width="64" height="64">
+            </a>
+            <a href="https://github.com/harshitp23" target="_blank">
+                <img src="github.png" alt="GitHub" width="64" height="64">
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
