--- a/projects.html
+++ b/projects.html
@@ -1,97 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Projects</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Projects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="hobbies.html">Hobbies</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <header>
+        <div class="logo-title">
+            <div class="logo">Harshit's Website</div>
+            <img src="mat.png" alt="Logo" class="header-logo" width="64" height="48">
+        </div>
+    </header>
 
-  <!-- Main Heading -->
-  <h1>Projects</h1>
+    <nav class="home-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html" class="active">Projects</a></li>
+            <li><a href="hobbies.html">Hobbies</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-  <!-- Project 1: Hotel Management System -->
-  <h2>Hotel Management System (Python, Tkinter, MySQL)</h2>
-  <p>This project is a hotel management system with a graphical user interface built using Tkinter and data stored in a MySQL database.</p>
-  <ul>
-    <li>GUI implementation with Tkinter for seamless user experience.</li>
-    <li>SQL database integration stores personnel and booking details.</li>
-    <li>Tables for customer details, booking records, room types, and hotel services.</li>
-    <li>Data validation and structured query management for efficient record-keeping.</li>
-  </ul>
-  <figure>
-    <img src="hotelmanagement.png" alt="Hotel management system interface screenshot">
-    <figcaption>Hotel Management System UI built with Tkinter</figcaption>
-  </figure>
+    <section class="main-content projects-page"> 
+        
+        <h1 class="page-title">My Projects</h1>
 
-  <!-- Project 2: Zoo Ticket System -->
-  <h2>Zoo Ticket System (Java)</h2>
-  <p>A Java-based school project for managing zoo ticket pricing and services.</p>
-  <ul>
-    <li>Age-based pricing for fair and structured ticket costs.</li>
-    <li>Family pack discounts for groups of six or more.</li>
-    <li>Additional charges for activities like feeding or petting animals.</li>
-    <li>Automated price calculation for efficient billing.</li>
-  </ul>
-  <figure>
-    <img src="zooticket.jpg" alt="Zoo ticket system screenshot">
-    <figcaption>Zoo Ticket System </figcaption>
-  </figure>
+        <article class="project-card">
+            <h2>Hotel Management System (Python, Tkinter, MySQL)</h2>
+            <div class="project-details">
+                <p>This project is a hotel management system with a graphical user interface built using Tkinter and data stored in a MySQL database.</p>
+                <ul>
+                    <li>GUI implementation with Tkinter for seamless user experience.</li>
+                    <li>SQL database integration stores personnel and booking details.</li>
+                    <li>Tables for customer details, booking records, room types, and hotel services.</li>
+                    <li>Data validation and structured query management for efficient record-keeping.</li>
+                </ul>
+            </div>
+            <figure class="project-figure">
+                <img src="hotelmanagement.png" alt="Hotel management system interface screenshot" class="project-img">
+                <figcaption>Hotel Management System UI built with Tkinter</figcaption>
+            </figure>
+        </article>
 
-  <!-- Project 3: Student Grade Calculator -->
-  <h2>Student Grade Calculator (Java, GUI, MySQL)</h2>
-  <p>This system helps students calculate how much they need to score on their next assignment or exam to maintain a target grade.</p>
-  <ul>
-    <li>Java-based GUI for user-friendly interaction.</li>
-    <li>MySQL integration for storing scores and grades per subject.</li>
-    <li>Automatically calculates required scores to maintain target grades.</li>
-  </ul>
-  <figure>
-    <img src="grade.jpg" alt="Student grade calculator interface">
-    <figcaption>Grade Calculator helps track and plan academic performance</figcaption>
-  </figure>
+        <hr> <article class="project-card reverse-layout">
+            <h2>Zoo Ticket System (Java)</h2>
+            <div class="project-details">
+                <p>A Java-based school project for managing zoo ticket pricing and services.</p>
+                <ul>
+                    <li>Age-based pricing for fair and structured ticket costs.</li>
+                    <li>Family pack discounts for groups of six or more.</li>
+                    <li>Additional charges for activities like feeding or petting animals.</li>
+                    <li>Automated price calculation for efficient billing.</li>
+                </ul>
+            </div>
+            <figure class="project-figure">
+                <img src="zooticket.jpg" alt="Zoo ticket system screenshot" class="project-img">
+                <figcaption>Zoo Ticket System</figcaption>
+            </figure>
+        </article>
 
-    <!-- Small Games Collection -->
-  <h2>Mini Games Collection (Python)</h2>
-  <p>A collection of fun and interactive console-based games built using Python to strengthen logic and problem-solving skills.</p>
-  <ul>
-    <li><strong>Auction Game</strong>: Players bid for items, with the highest bidder winning at the end.</li>
-    <li><strong>Number Guessing</strong>: Guess the correct number between 1 and 100. Includes multiple difficulty levels that adjust the number of attempts available.</li>
-    <li><strong>Blackjack</strong>: A simplified version of the classic card game against a computer dealer.</li>
-    <li><strong>Higher or Lower</strong>: Predict which celebrity has more Instagram followers, testing your knowledge of social media popularity.</li>
-  </ul>
+        <hr>
 
-  <!-- College Projects List -->
-  <h2>College Coursework Projects</h2>
-  <ul>
-    <li><strong>Event Management System</strong>: A menu-based 2D array system for organizing and managing monthly events.</li>
-    <li><strong>Library Management System</strong>: Lets users browse and borrow books; includes exception handling for invalid operations.</li>
-    <li><strong>Monthly Calendar System</strong>: Object-oriented scheduler using Comparable interface and custom classes.</li>
-    <li><strong>Playlist Generator</strong>: Recursive algorithm that builds an optimized playlist within a given time duration.</li>
-  </ul>
+        <article class="project-card">
+            <h2>Student Grade Calculator (Java, GUI, MySQL)</h2>
+            <div class="project-details">
+                <p>This system helps students calculate how much they need to score on their next assignment or exam to maintain a target grade.</p>
+                <ul>
+                    <li>Java-based GUI for user-friendly interaction.</li>
+                    <li>MySQL integration for storing scores and grades per subject.</li>
+                    <li>Automatically calculates required scores to maintain target grades.</li>
+                </ul>
+            </div>
+            <figure class="project-figure">
+                <img src="grade.jpg" alt="Student grade calculator interface" class="project-img">
+                <figcaption>Grade Calculator helps track and plan academic performance</figcaption>
+            </figure>
+        </article>
 
-  <!-- Competitive Programming -->
-  <h2>Competitive Programming & Problem Solving</h2>
-  <ul>
-    <li>Solving algorithmic challenges regularly on <a href="https://leetcode.com" target="_blank">LeetCode</a>.</li>
-    <li>Strengthening knowledge of data structures and algorithms.</li>
-    <li>Focusing on time/space optimization and coding efficiency.</li>
-  </ul>
+        <hr>
+
+        <div class="mini-projects">
+            <h2>Mini Games Collection (Python)</h2>
+            <p>A collection of fun and interactive console-based games built using Python to strengthen logic and problem-solving skills.</p>
+            <ul class="mini-list">
+                <li><strong>Auction Game</strong>: Players bid for items, with the highest bidder winning at the end.</li>
+                <li><strong>Number Guessing</strong>: Guess the correct number between 1 and 100. Includes multiple difficulty levels that adjust the number of attempts available.</li>
+                <li><strong>Blackjack</strong>: A simplified version of the classic card game against a computer dealer.</li>
+                <li><strong>Higher or Lower</strong>: Predict which celebrity has more Instagram followers, testing your knowledge of social media popularity.</li>
+            </ul>
+
+            <h2>College Coursework Projects</h2>
+            <ul class="mini-list">
+                <li><strong>Event Management System</strong>: A menu-based 2D array system for organizing and managing monthly events.</li>
+                <li><strong>Library Management System</strong>: Lets users browse and borrow books; includes exception handling for invalid operations.</li>
+                <li><strong>Monthly Calendar System</strong>: Object-oriented scheduler using Comparable interface and custom classes.</li>
+                <li><strong>Playlist Generator</strong>: Recursive algorithm that builds an optimized playlist within a given time duration.</li>
+            </ul>
+
+            <h2>Competitive Programming & Problem Solving</h2>
+            <ul class="mini-list">
+                <li>Solving algorithmic challenges regularly on <a href="https://leetcode.com" target="_blank">LeetCode</a>.</li>
+                <li>Strengthening knowledge of data structures and algorithms.</li>
+                <li>Focusing on time/space optimization and coding efficiency.</li>
+            </ul>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>© 2025 Harshit</p>
+        <div class="social-icons">
+            <a href="https://instagram.com/harshatjames" target="_blank">
+                <img src="instagram.png" alt="Instagram" width="64" height="64">
+            </a>
+            <a href="https://linkedin.com/in/harshit-prithiani-4a9555313" target="_blank">
+                <img src="linkedin.png" alt="LinkedIn" width="64" height="64">
+            </a>
+            <a href="https://github.com/harshitp23" target="_blank">
+                <img src="github.png" alt="GitHub" width="64" height="64">
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
-
-
-
-
